--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "url": "https://github.com/AnasDemnati/AnasDemnati.github.io.git"
   },
   "dependencies": {
+    "bower": "^1.5.2",
     "chart.js-rangeslider": "^1.2.1",
     "chartjs-plugin-zoom": "^0.5.0",
     "grunt": "^0.4.1",
@@ -40,6 +41,7 @@
     "time-grunt": "^0.3.1"
   },
   "devDependencies": {
+    "bower": "^1.5.2",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^0.7.3",
     "grunt-build-control": "^0.7.1",
