--- a/package.json
+++ b/package.json
@@ -77,9 +77,9 @@
   },
   "scripts": {
     "test": "grunt test",
-    "start": "grunt serve",
     "build": "grunt build",
     "dist": "grunt serve:dist",
-    "postinstall": "bower install"
+    "postinstall": "grunt serve",
+    "start": "node server.js"
   }
 }
