--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "test": "grunt test",
     "build": "grunt build",
     "dist": "grunt serve:dist",
-    "postinstall": "grunt serve",
+    "postinstall": "grunt serve:dist",
     "start": "node server.js"
   }
 }
