--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "url": "https://github.com/AnasDemnati/AnasDemnati.github.io.git"
   },
   "dependencies": {
+    "express": "~4.5.1",
     "chart.js-rangeslider": "^1.2.1",
     "chartjs-plugin-zoom": "^0.5.0",
     "grunt": "^0.4.1",
@@ -40,6 +41,7 @@
     "time-grunt": "^0.3.1"
   },
   "devDependencies": {
+    "express": "~4.5.1",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^0.7.3",
     "grunt-build-control": "^0.7.1",
@@ -75,7 +77,8 @@
   },
   "scripts": {
     "test": "grunt test",
-    "start": "grunt serve",
+    "start": "node server.js",
+    "serve": "grunt serve",
     "build": "grunt build",
     "publish": "grunt buildcontrol:pages",
     "dist": "grunt serve:dist",
